--- a/src/main/resources/com/example/styles.css
+++ b/src/main/resources/com/example/styles.css
@@ -106,7 +106,7 @@
 }
 
 .task-group-title {
-    -fx-background-color: #ba3a3a;
+    -fx-background-color: #696969;
     -fx-border-radius: 5;
     -fx-background-radius: 5;
     -fx-pref-width: 300;
@@ -133,8 +133,8 @@
     -fx-background-color: #ffffff;
     -fx-padding: 10 5 5 5;
     -fx-spacing: 5;
-    -fx-border-radius: 5;
-    -fx-background-radius: 5;
+    -fx-border-radius: 0 5 5 0;
+    -fx-background-radius: 0 5 5 0;
     -fx-cursor: hand;
 }
 
@@ -143,6 +143,12 @@
     -fx-cursor: hand;
     -fx-font-size: 14px;
     -fx-text-fill: #34495e;
+}
+
+.colored-task-container {
+    -fx-padding: 0 0 0 10;
+    -fx-border-radius: 5;
+    -fx-background-radius: 5;
 }
 
 .tags-pane {
